--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="logo"></div>
-		<div id="api-status" style="
+		<div id="api_status" style="
 			position: absolute;
 			width: 40px;
 			height: 40px;
